--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@farcaster/hub-web": "^0.7.3",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
