--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BASE_URL="https://frames-test-eight.vercel.app/"
-HOST="https://frames-test-eight.vercel.app/"
+BASE_URL=https://frames-test-eight.vercel.app/
+HOST=https://frames-test-eight.vercel.app/
