--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BASE_URL=https://frames-test-eight.vercel.app/
-HOST=https://frames-test-eight.vercel.app/
+BASE_URL=frames-test-weld.vercel.app
+HOST=frames-test-weld.vercel.app
