--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BASE_URL=https://frames-test-weld.vercel.app
-HOST=https://frames-test-weld.vercel.app
+BASE_URL=https://frames-test-weld.vercel.app/
+HOST=https://frames-test-weld.vercel.app/
