--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@airstack/node": "^0.0.5",
     "@farcaster/hub-web": "^0.7.3",
+    "cloudinary": "^1.41.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.2",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
