--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "satori": "^0.10.11",
     "sharp": "^0.33.2",
     "tailwindcss": "^3.4.1"
   },
